# coordinate_converter

./: CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  coordinate_converter.hpp  time_system.hpp
.github/: topics.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
cmake/: coordinate_converter-config.cmake.in
docs/: README.en.md  README.zh-CN.md
tests/: CMakeLists.txt  earth.cpp  time_system.cpp
tools/: CMakeLists.txt  coordinate_converter_cli.cpp
